# fo-hud-mon

./: .gitignore  CLAUDE.md  FO_HUD_MONITOR.md  LICENSE  README.md  jitpack.yml  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/androidTest/java/dev/fordewe/fohudmon/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/dev/fordewe/fohudmon/: MainActivity.kt  StressTests.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dev/fordewe/fohudmon/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hud-core/: build.gradle.kts
hud-core/src/main/: AndroidManifest.xml
hud-core/src/main/cpp/: CMakeLists.txt  cpu_monitor.cpp  hud_jni.cpp  mem_monitor.cpp  net_monitor.cpp  proc_reader.cpp
hud-core/src/main/cpp/include/: cpu_monitor.h  mem_monitor.h  net_monitor.h  proc_reader.h
hud-core/src/main/kotlin/dev/fordewe/fohudmon/: DevHud.kt  FpsMonitor.kt  HudConfig.kt  HudOverlay.kt  HudView.kt  MetricCollector.kt  MetricLogger.kt
hud-core/src/main/kotlin/dev/fordewe/fohudmon/internal/: HudInitProvider.kt
hud-noop/: build.gradle.kts
hud-noop/src/main/kotlin/dev/fordewe/fohudmon/: DevHud.kt  HudConfig.kt
